Fix datepicker not showing (fix #522 too)

--- a/client/css/style.css
+++ b/client/css/style.css
@@ -148,6 +148,10 @@ main nav > :last-child {
     margin: auto;
 }
 
+#content .form-group {
+    overflow: hidden;
+}
+
 @media (max-width: 480px) {
     #content {
         min-width: 100%;
@@ -167,10 +171,6 @@ main nav > :last-child {
     .panel-body p.btn-group {
         padding: 0;
     }
-}
-
-#content .form-group {
-    overflow: hidden;
 }
 
 #content ul li {
@@ -1001,4 +1001,10 @@ ul.bullet li {
 
 .checkbox-inside-label input {
     margin-right: 5px;
+}
+
+/* Forces the datepicker to be displayed outside a parent with an hidden overflow */
+.picker--opened .picker__holder {
+    position: fixed;
+    overflow: visible;
 }
